Update on "[DataLoader] Add option to reinforce type during runtime validation for DP instance"
Add a method named `reinforce_type` to `DataPipe` instance. If the `runtime_validation` is decorated to the `DataPipe` class, the instance of this class is able to validate the data type by the `expected_type`.

If the class is not decorated with `runtime_validation`, it will raise a warning for user that the runtime validation is not used for this class.

It also works with the context manager to disable the runtime validation.
```py
>>> T = TypeVar('T', int, str)

>>> class DP(IterDataPipe[T]):
...     def __init__(self, ds):
...         self.ds = ds
...     @runtime_validation
...     def __iter__(self):
...         for d in self.ds:
...             yield d

>>> DP(range(10)).reinforce_type(float)
TypeError: Expected 'expected_type' as a subtype of ~T, but found float

>>> dp = DP(range(10)).reinforce_type(str)
>>> list(dp)
RuntimeError: Expected an instance as subtype of str, but found 0(<class 'int'>)
>>> with runtime_validation_disabled():
...     print(list(dp))
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]

>>> dp = DP(ds).reinforce_type(int)
>>> print(list(dp))
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
```

Besides, some type annotation for the class is too general, and we can use it to reinforce the type for each instance based on argument at the construction time.
```py
>>> class DP1(IterDataPipe[Union[int, str]]):
...     def __init__(self, dp, option):
...         if option == 'int':
...            self.enforce_type(int)
...         elif option == 'str':
...            self.enforce_type(str)

>>> class DP2(IterDataPipe):
...     @argument_validation
...     def __init__(self, dp: IterDataPipe[int]):
...         pass
>>> dp1 = DP1(range(10), 'int')  # int
>>> dp2 = DP2(dp1)  # No Exception

>>> dp1 = DP1(range(10))  # Union[int, str]
>>> dp2 = DP2(dp1)
TypeError: Expected type of argument 'dp' as a subtype of hint int, but found typing.U

--- a/torch/utils/data/typing.ipynb
+++ b/torch/utils/data/typing.ipynb
@@ -730,6 +730,83 @@
     "dp = DP(ds).reinforce_type(int)\n",
     "print(list(dp))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Different type based on the logic of class initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DP(IterDataPipe[Union[int, str]]):\n",
+    "    def __init__(self, label):\n",
+    "        if label == 'int':\n",
+    "            self.reinforce_type(int)\n",
+    "        elif label == 'str':\n",
+    "            self.reinforce_type(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int\n"
+     ]
+    }
+   ],
+   "source": [
+    "dp = DP('int')\n",
+    "print(dp.type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "str\n"
+     ]
+    }
+   ],
+   "source": [
+    "dp = DP('str')\n",
+    "print(dp.type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "typing.Union[int, str]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dp = DP('')\n",
+    "print(dp.type)"
+   ]
   }
  ],
  "metadata": {
